<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextBillAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="111dp"
        android:text="Calculate Tip"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBillAmount"
        tools:ignore="HardcodedText" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/textView10PercentTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_10_tip_0_00"
        app:layout_constraintBottom_toTopOf="@+id/textView15PercentTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView15PercentTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10PercentTip"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="14dp"
        android:text="@string/_15_tip_0_00"
        app:layout_constraintBottom_toTopOf="@+id/textView20PercentTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10PercentTip" />

    <TextView
        android:id="@+id/textView20PercentTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView15PercentTip"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="213dp"
        android:text="@string/_20_tip_0_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15PercentTip" />

    <EditText
        android:id="@+id/editTextBillAmount"
        android:layout_width="297dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="43dp"
        android:autofillHints=""
        android:hint="@string/enter_bill_total"
        android:inputType="numberDecimal"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="31dp"
        android:text="@string/tip_amounts_will_display_here"
        app:layout_constraintBottom_toTopOf="@+id/textView10PercentTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />
</androidx.constraintlayout.widget.ConstraintLayout>